--- a/less/stories.less
+++ b/less/stories.less
@@ -5,6 +5,7 @@ body {
   margin: 0;
   font-size: 1.6rem;
   overflow-x: hidden;
+  font-family: 'Roboto Condensed', sans-serif;
 
   a {
     text-decoration: none;
@@ -740,7 +741,7 @@ body {
                   text-transform: uppercase;
 
                   .tab-item {
-                    display: block;
+                    display: inline-block;
 
                     a {
                       color: black;
