--- a/media/stories-media.less
+++ b/media/stories-media.less
@@ -206,6 +206,8 @@
             .tabs-viewed {
               .tab-control {
                 .tab-list-contain {
+                  width: calc(100% + 20px);
+                  margin: 0 -10px;
                   .tab-list {
                     font-size: 14px;
                     letter-spacing: 1px;
