--- a/less/footer.less
+++ b/less/footer.less
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Roboto Condensed', sans-serif;
   @gray-text: rgba(0, 0, 0, .56);
   @hover-color: rgba(169, 169, 169, 0.212);
   footer {
