--- a/less/header.less
+++ b/less/header.less
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Roboto Condensed', sans-serif;
   @hover-color: rgba(169, 169, 169, 0.212);
   a.button {
     display: inline-block;
