--- a/less/main.less
+++ b/less/main.less
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
   @hover-color: rgba(169, 169, 169, 0.212);
   @item-color: #1E3932;
