--- a/less/menu.less
+++ b/less/menu.less
@@ -1,4 +1,5 @@
 body {
+  font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
   @gray-text: rgba(0, 0, 0, .56);
   @footgr-color: hsla(0,0%,100%,.7);
