--- a/media/stories-media.css
+++ b/media/stories-media.css
@@ -90,6 +90,10 @@
     width: 100%;
     margin: 0 auto 20px;
   }
+  body .wraper .main-content .content .content-wrap .tabs-viewed .tab-control .tab-list-contain {
+    width: calc(100% + 20px);
+    margin: 0 -10px;
+  }
   body .wraper .main-content .content .content-wrap .tabs-viewed .tab-control .tab-list-contain .tab-list {
     font-size: 14px;
     letter-spacing: 1px;
